package com.seatcode.mowerengine.model

data class Coordinates(
    val x: Int,
    val y: Int
)

